--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </p>
     </div>
 
-    <div class="section">
+    <!--<div class="section">
       <h2>Projects</h2>
       <div class="project-links">
         <a href="https://github.com/yourusername/project1" target="_blank">Project One</a>
@@ -164,7 +164,7 @@
           <li>Created landing pages and optimized SEO.</li>
         </ul>
       </div>
-    </div>
+    </div>-->
 
     <div class="section">
       <h2>Education</h2>
