--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name - CV</title>
+  <title>Markus Sinimaa - CV</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -120,7 +120,7 @@
 
     <h1>Your Name</h1>
     <div class="contact">
-      📧 your.email@example.com &nbsp;|&nbsp;
+      📧 markus.sinimaa@gmail.com &nbsp;|&nbsp;
       📞 +123 456 7890 &nbsp;|&nbsp;
       🌐 www.yourwebsite.com &nbsp;|&nbsp;
       💼 LinkedIn / GitHub
@@ -134,19 +134,19 @@
       </p>
     </div>
 
-    <!--<div class="section">
+    <div class="section">
       <h2>Projects</h2>
       <div class="project-links">
-        <a href="https://github.com/yourusername/project1" target="_blank">Project One</a>
-        <a href="https://yourportfolio.com/project2" target="_blank">Project Two</a>
-        <a href="https://yourportfolio.com/project3" target="_blank">Project Three</a>
+        <a href="https://github.com/CodeKittyAlex/school" target="_blank">school github page</a>
+        <a href="https://github.com/CodeKittyAlex/me-time" target="_blank">Free time programming code</a>
+       <!-- <a href="https://yourportfolio.com/project3" target="_blank">Project Three</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Three</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Four</a>
-        <a href="https://yourportfolio.com/project3" target="_blank">Project Six/Seven</a>
+        <a href="https://yourportfolio.com/project3" target="_blank">Project Six/Seven</a>-->
       </div>
     </div>
 
-    <div class="section">
+    <!--<div class="section">
       <h2>Work Experience</h2>
       <div class="job">
         <h3>Front-End Developer – Tech Company</h3>
@@ -169,7 +169,7 @@
     <div class="section">
       <h2>Education</h2>
       <div class="edu">
-        <h3>Bachelor of Computer Science</h3>
+        <h3>Tallinna Tööstushariduskeskus</h3>
         <span>2015 – 2019 | University Name</span>
       </div>
     </div>
