--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <h2>Projects</h2>
       <div class="project-links">
         <a href="https://github.com/CodeKittyAlex/school" target="_blank">school github page</a>
-        <a href="https://github.com/CodeKittyAlex/me-time" target="_blank">Free time programming code</a>
-        <a href="projekt2.html" target="_blank">Project Three</a>
+        <a href="https://github.com/CodeKittyAlex/me-time" target="_blank">Free time</a>
+        <a href="projekt2.html" target="_blank">help</a>
         <!--<a href="https://yourportfolio.com/project3" target="_blank">Project Three</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Four</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Six/Seven</a>-->
