--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- Profile Image -->
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic" />
 
-    <h1>Your Name</h1>
+    <h1>Markus Sinimaa</h1>
     <div class="contact">
       📧 markus.sinimaa@gmail.com &nbsp;|&nbsp;
       🌐 www.yourwebsite.com &nbsp;|&nbsp;
