--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="contact">
       📧 markus.sinimaa@gmail.com &nbsp;|&nbsp;
       🌐 www.yourwebsite.com &nbsp;|&nbsp;
-      💼 LinkedIn / GitHub
+      💼 LinkedIn
     </div>
 
     <div class="section">
@@ -138,7 +138,7 @@
       <div class="project-links">
         <a href="https://github.com/CodeKittyAlex/school" target="_blank">school github page</a>
         <a href="https://github.com/CodeKittyAlex/me-time" target="_blank">Free time</a>
-        <a href="projekt2.html" target="_blank">help</a>
+        <a href="projekt2.html" target="_blank">projekt2</a>
         <!--<a href="https://yourportfolio.com/project3" target="_blank">Project Three</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Four</a>
         <a href="https://yourportfolio.com/project3" target="_blank">Project Six/Seven</a>-->
