--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
       <h2>Education</h2>
       <div class="edu">
         <h3>Tallinna Tööstushariduskeskus</h3>
-        <span>2015 – 2019 | University Name</span>
+        <span>2025 – 2029 | Tallinna Tööstushariduskeskus</span>
       </div>
     </div>
 
-    <div class="section">
+    <!--<div class="section">
       <h2>Skills</h2>
       <ul>
         <li>HTML, CSS, JavaScript, React</li>
@@ -181,13 +181,13 @@
         <li>Responsive Design, Accessibility</li>
         <li>Basic Python and SQL</li>
       </ul>
-    </div>
+    </div>-->
 
     <div class="section">
       <h2>Languages</h2>
       <ul>
         <li>English – Fluent</li>
-        <li>Spanish – Intermediate</li>
+        <li>Estonian – Fluent</li>
       </ul>
     </div>
 
